# LILYGO-T-QT-PRO-S3-ESP-IDF

./: CMakeLists.txt  README.md  code.code-workspace  partition.csv  sdkconfig  sdkconfig.old
cmd/console_cmd_wifi/: idf_component.yml
cmd/ota-cmd/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
cmd/ota-cmd/examples/wifi_ota/: CMakeLists.txt  sdkconfig.ci.https_ota  sdkconfig.defaults
cmd/ota-cmd/examples/wifi_ota/main/: CMakeLists.txt  idf_component.yml  main.c
cmd/ota-cmd/include/: ota_cmd.h
cmd/ota-cmd/src/: ota_cmd.c  ota_common.c  ota_common.h  simpleota_cmd.c
cmd/sys-cmd/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
cmd/sys-cmd/include/: sys_cmd.h
cmd/sys-cmd/src/: dsleep_cmd.c  heap_cmd.c  info_cmd.c  mac_cmd.c  nvs_cmd.c  reg_cmd.c  restart_cmd.c  system_cmd.c
cmd/utils/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
cmd/utils/include/: qa_utils.h
cmd/utils/src/: ip_addr.c  lib.c  log.c  malloc.c
cmd/wifi-cmd/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
cmd/wifi-cmd/include/: wifi_cmd.h  wifi_cmd_config.h  wifi_cmd_deprecated.h  wifi_cmd_handler.h
cmd/wifi-cmd/src/: ap_cmd.c  sta_cmd.c  wifi_band_cmd.c  wifi_cmd.c  wifi_common.c  wifi_handler.c  wifi_he_debug_cmd.c  wifi_init.c  wifi_itwt_cmd.c  wifi_proto_cbw_cmd.c  wifi_query_cmd.c  wifi_stats_cmd.c
components/argtable3/: idf_component.yml
components/elf_loader/: idf_component.yml
components/esp-boost/: CHANGELOG.md  README.md  README_CN.md  idf_component.yml
components/esp-boost/.gitlab/ci/: rules.yml  target_test.yml
components/esp-boost/src/boost/config/platform/: esp32.hpp
components/esp-boost/test_apps/algorithm/example/: pytest_algorithm_example.py
components/esp-boost/test_apps/algorithm/test/: pytest_algorithum_test.py
components/esp-boost/test_apps/align/test/: pytest_align_test.py
components/esp-boost/test_apps/array/test/: pytest_array_test.py
components/esp-boost/test_apps/format/example/: pytest_format_example.py
components/esp-boost/test_apps/format/test/: pytest_format_test.py
components/esp-boost/test_apps/graph/example/: pytest_graph_example.py
components/esp-boost/test_apps/signals2/example/: pytest_signals2_example.py
components/esp-boost/test_apps/signals2/test/: pytest_signals2_test.py
components/esp-boost/test_apps/thread/example/: pytest_thread_example.py
components/esp-boost/test_apps/thread/test_common/: pytest_thread_test_common.py
components/esp-boost/test_apps/thread/test_more/: pytest_thread_test_more.py
components/esp_cli/: idf_component.yml
components/esp_cli_commands/: idf_component.yml
components/esp_linenoise/: .component_hash  CHECKSUMS.json  idf_component.yml
components/esp_lv_decoder/: idf_component.yml
components/extended_vfs/: idf_component.yml
components/libpng/: idf_component.yml
components/spi_bus/: idf_component.yml
components/xz/: .component_hash  CHECKSUMS.json  idf_component.yml
extras/help/git-help/: Git_HELP.md
lib/sysmon/: idf_component.yml
main/: CMakeLists.txt  app_main.cpp
mylibs/one-cli-v005/: README.md  version.txt
mylibs/one-cli-v005/include/: config.h
